@@ -25,4 +25,21 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: junitVer
     testCompile group: 'org.mockito', name: 'mockito-core', version: mockitoVer
 }
- 
+
+
+processResources {
+    from(sourceSets.test.resources.srcDirs) {
+        include "**/*.json"
+    }
+}
+
+test {
+    // set JVM arguments for the test JVM(s)
+    jvmArgs "-XX:+IgnoreUnrecognizedVMOptions",
+        "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
+        "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+        "--add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED",
+        "--add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED",
+        "--add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED",
+        "--illegal-access=permit"
+}
